<resources>
    <string name="app_name">Refill Water</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">LOGIN</string>
    <string name="signup">SIGN UP</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="logo">LOGO</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="register">Register</string>
    <string name="email_student">Email (Student)</string>
    <string name="home">Home</string>
    <string name="history">History</string>
    <string name="scan">Scan</string>
    <string name="cart">Cart</string>
    <string name="profile">Profile</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hi_john">Hi, John!</string>
    <string name="nim_204170xx">NIM 204170XX</string>
    <string name="points">Points</string>
    <string name="_200">200</string>
    <string name="top_up">Top - Up</string>
    <string name="check_these_out">Check these out</string>
    <string name="view_all">View All</string>
    <string name="gallon_volume">Gallon Volume</string>
    <string name="have_you_drink_enough_water_today">Have you drink enough water today?</string>
    <string name="your_hydration_level_today_is">Your hydration level today is</string>
    <string name="_30">30%</string>
    <string name="hydration_check">Hydration Check</string>
    <string name="background">background</string>
    <string name="account">Account</string>
    <string name="john_doe">John Doe</string>
    <string name="johndoe_student_ciputra_ac_id">johndoe@student.ciputra.ac.id</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="notifications">Notifications</string>
    <string name="report_issues">Report Issues</string>
    <string name="how_to_use">How to use</string>
    <string name="about">About</string>
    <string name="_29_oct_2019_11_05">29 Oct 2019 11:05</string>
    <string name="_50_ml">50 ml</string>
    <string name="lantai_2">Lantai 2</string>
    <string name="_20">20</string>
    <string name="water_remaining">Water Remaining</string>
    <string name="_1200_ml">1200 ml</string>
    <string name="save_summary">Save Summary</string>
    <string name="hydration_level">Hydration Level</string>
    <string name="_29_oct_2019">29 Oct 2019</string>
    <string name="_30_hydrated">30% Hydrated</string>
    <string name="your_water_intake_today_is_100ml">Your water intake today is 100ml</string>
    <string name="see_full_history">See Full History</string>
    <string name="how_much_water_do_you_want">How much water do you want?</string>
    <string name="_420">420</string>
    <string name="_0_ml">0 ml</string>
    <string name="_400_ml">400 ml</string>
    <string name="fill_my_bottle">Fill My Bottle</string>
    <string name="add">Add</string>
    <string name="name">Name</string>
    <string name="change_password">Change Password?</string>
    <string name="save">Save</string>
    <string name="change__password">Change Password</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="save_new_password">Save New Password</string>
    <string name="frame">frame</string>
    <string name="onboarding">onboarding</string>
    <string name="onboarding1">Plastic Free Movement</string>
    <string name="lorem_ipsum">Lorem Ipsum Dolor Sim</string>
    <string name="refill">Refill</string>
    <string name="water">Water</string>
    <string name="get_started">Get Started</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="log_in">Log In</string>
    <string name="scan_qr_code">Scan QR Code</string>
    <string name="balance">Balance</string>
    <string name="log_out">Log Out</string>
    <string name="my_bottle">My Bottle</string>
    <string name="_0">0</string>
    <string name="image">image</string>
    <string name="payment_successful">Payment Successful</string>
    <string name="you_have_paid">You have paid</string>
    <string name="rp_10_000">Rp. 10.000</string>
    <string name="enjoy_your_drink">Enjoy your drink!</string>
    <string name="email">Email</string>

    <string-array name="majors_array">
        <item>ACC</item>
        <item>CB</item>
        <item>COM</item>
        <item>HTB</item>
        <item>IBM-IC</item>
        <item>IBM-RC</item>
        <item>IMT</item>
        <item>INA</item>
        <item>ISB</item>
        <item>MED</item>
        <item>PSY</item>
        <item>VCD</item>
    </string-array>
</resources>
