<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/default_size">

    <EditText
        android:id="@+id/tv_login_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/input_text_rounded_corner"
        android:backgroundTint="@color/colorPrimaryLighter"
        android:hint="@string/username"
        android:importantForAutofill="no"
        android:inputType="text"
        android:padding="20dp"
        android:selectAllOnFocus="true" />

    <EditText
        android:id="@+id/tv_login_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_size"
        android:background="@drawable/input_text_rounded_corner"
        android:backgroundTint="@color/colorPrimaryLighter"
        android:hint="@string/password"
        android:imeActionLabel="@string/action_sign_in_short"
        android:imeOptions="actionDone"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:padding="20dp"
        android:selectAllOnFocus="true" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/double_size">

        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:background="@drawable/input_text_rounded_corner"
            android:backgroundTint="@color/colorPrimaryLight"
            android:enabled="false"
            android:padding="20dp"
            android:text="@string/login"
            android:textColor="@color/txt_button" />

        <ProgressBar
            android:id="@+id/pb_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:indeterminateTint="@android:color/white"
            android:visibility="gone" />
    </RelativeLayout>

    <TextView
        android:id="@+id/tv_forgot_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:text="@string/forgot_password"
        android:textColor="@color/colorPrimaryLight" />
</LinearLayout>