<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/double_size">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <EditText
            android:id="@+id/edt_register_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/input_text_rounded_corner"
            android:backgroundTint="@color/colorPrimaryLighter"
            android:hint="@string/email_student"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress"
            android:padding="20dp"
            android:selectAllOnFocus="true" />

        <EditText
            android:id="@+id/edt_register_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_size"
            android:background="@drawable/input_text_rounded_corner"
            android:backgroundTint="@color/colorPrimaryLighter"
            android:hint="@string/password"
            android:imeActionLabel="@string/action_sign_in_short"
            android:imeOptions="actionDone"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:padding="20dp"
            android:selectAllOnFocus="true" />

        <EditText
            android:id="@+id/edt_register_password2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_size"
            android:background="@drawable/input_text_rounded_corner"
            android:backgroundTint="@color/colorPrimaryLighter"
            android:hint="@string/confirm_password"
            android:imeActionLabel="@string/action_sign_in_short"
            android:imeOptions="actionDone"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:padding="20dp"
            android:selectAllOnFocus="true" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/double_size">

            <Button
                android:id="@+id/btn_sign_up"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:background="@drawable/input_text_rounded_corner"
                android:backgroundTint="@color/colorPrimaryLight"
                android:enabled="false"
                android:padding="20dp"
                android:text="@string/signup"
                android:textColor="@color/txt_button" />

            <ProgressBar
                android:id="@+id/pb_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:indeterminateTint="@android:color/white"
                android:visibility="gone" />
        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="0dp"
            android:paddingEnd="10dp"
            android:text="@string/already_have_an_account" />

        <TextView
            android:id="@+id/tv_register_to_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/log_in"
            android:textColor="@color/colorPrimaryLight"
            android:textStyle="bold" />
    </LinearLayout>
</LinearLayout>