<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/img_onboarding"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:contentDescription="@string/onboarding"
        android:src="@drawable/onboarding1" />

    <TextView
        android:id="@+id/tv_onboarding_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_size"
        android:text="@string/onboarding1"
        android:textAlignment="center"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="@dimen/text_large"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_onboarding_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/half_size"
        android:text="@string/lorem_ipsum"
        android:textAlignment="center"
        android:textSize="@dimen/text_medium" />

</LinearLayout>