<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".intro.SplashActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="@dimen/double_image_size"
        android:layout_gravity="center"
        android:contentDescription="@string/logo"
        android:scaleX="1.2"
        android:scaleY="1.2"
        android:src="@drawable/logo" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="Gilroy"
            android:text="@string/refill"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/text_giant"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/half_size"
            android:fontFamily="Gilroy"
            android:text="@string/water"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/text_giant"
            android:textStyle="bold" />
    </LinearLayout>
</LinearLayout>