<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WaterSliderActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="135dp"
        android:src="@drawable/bg_toright"
        android:contentDescription="@string/background" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardElevation="@dimen/default_size"
        app:cardCornerRadius="@dimen/default_size"
        app:cardMaxElevation="@dimen/default_size"
        app:contentPaddingLeft="@dimen/default_size"
        app:contentPaddingRight="@dimen/default_size"
        app:contentPaddingTop="@dimen/double_size"
        app:contentPaddingBottom="@dimen/double_size"
        android:layout_marginTop="@dimen/double_size"
        android:layout_marginStart="@dimen/default_size"
        android:layout_marginEnd="@dimen/default_size"
        android:layout_marginBottom="@dimen/default_size">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/how_much_water_do_you_want"
                android:textColor="@android:color/black"
                android:textSize="@dimen/text_medium"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_choose_place"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lantai_2"
                android:textSize="@dimen/text_small"
                android:layout_marginTop="@dimen/half_size"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView5" />

            <TextView
                android:id="@+id/tv_choose_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/john_doe"
                android:textSize="@dimen/text_small"
                android:textStyle="bold"
                android:layout_marginTop="@dimen/triple_size"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_choose_place" />

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_marginTop="@dimen/default_size"
                android:contentDescription="@string/logo"
                android:src="@drawable/small_water"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.44"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_choose_name" />

            <TextView
                android:id="@+id/tv_choose_point"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/half_size"
                android:text="@string/_420"
                android:textColor="@android:color/black"
                android:textSize="@dimen/text_huge"
                app:layout_constraintBottom_toBottomOf="@+id/imageView4"
                app:layout_constraintStart_toEndOf="@+id/imageView4"
                app:layout_constraintTop_toTopOf="@+id/imageView4" />

            <SeekBar
                android:id="@+id/sb_choose_size"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:progress="50"
                android:max="400"
                android:progressDrawable="@drawable/custom_seekbar"
                android:scrollbarSize="@dimen/double_size"
                android:layout_marginTop="@dimen/double_size"
                android:thumb="@drawable/seekbar_thumb"
                android:thumbOffset="16dp"
                app:layout_constraintTop_toBottomOf="@+id/imageView4" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/half_size"
                android:text="@string/_0_ml"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/text_small"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/sb_choose_size" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_400_ml"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/text_small"
                android:layout_marginEnd="@dimen/half_size"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/sb_choose_size" />

            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="25dp"
                android:layout_height="40dp"
                android:layout_marginTop="@dimen/triple_image_size"
                android:contentDescription="@string/logo"
                android:src="@drawable/ic_water_glass"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textView7" />

            <TextView
                android:id="@+id/tv_choose_size"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_50_ml"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="@dimen/text_large"
                android:layout_marginStart="@dimen/half_size"
                app:layout_constraintBottom_toBottomOf="@+id/imageView5"
                app:layout_constraintStart_toEndOf="@+id/imageView5"
                app:layout_constraintTop_toTopOf="@+id/imageView5" />

            <TextView
                android:id="@+id/tv_choose_spend"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_20"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="@dimen/text_large"
                app:layout_constraintBottom_toBottomOf="@+id/tv_choose_size"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/tv_choose_size" />

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:contentDescription="@string/logo"
                android:src="@drawable/small_water"
                android:layout_marginEnd="@dimen/half_size"
                app:layout_constraintBottom_toBottomOf="@+id/tv_choose_spend"
                app:layout_constraintEnd_toStartOf="@+id/tv_choose_spend"
                app:layout_constraintTop_toTopOf="@+id/tv_choose_spend" />

            <Button
                android:id="@+id/btn_choose_fill"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/input_text_rounded_corner"
                android:backgroundTint="@color/colorPrimaryLight"
                android:text="@string/fill_my_bottle"
                android:textColor="@android:color/white"
                android:layout_marginTop="@dimen/default_size"
                app:layout_constraintTop_toBottomOf="@id/tv_choose_spend" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>